--- a/Unico teste real da internet/quiz/quiz.html
+++ b/Unico teste real da internet/quiz/quiz.html
@@ -1,9 +1,18 @@
-<button ng-if = "nPergunta > 0" ng-click="retrocederPergunta()">retornar</button>
-<ul>
-    <li>
-        {{questao.pergunta}}
-    </li>
-    <li ng-repeat="resposta in questao.respostas">
-       <button ng-click="avancarPergunta()">{{resposta.resposta}}</button> 
-    </li>
-</ul>
+<div class = "questions">
+    <div class = "caixa">
+        <div class = "top-part">
+            <div class = "pergunta">
+                {{questao.pergunta}}  
+            </div>
+            <span>
+                <button ng-if = "nPergunta > 0" ng-click="retrocederPergunta()">---Questão Anterior---</button>
+            </span>
+        </div>
+        <div class = "respostas">
+            <span ng-repeat="resposta in questao.respostas">
+            <button ng-click="avancarPergunta()">{{resposta.resposta}}</button> 
+            </span>
+        </div>
+    </div>
+</div>
+
