Pag temporaria de criação de Perguntas
Criação de uma pagina para se inserir perguntas diretamente no banco de dados.

--- a/Unico teste real da internet/index.html
+++ b/Unico teste real da internet/index.html
@@ -49,7 +49,8 @@
 
     <script src='ranking/ranking.controller.js'></script>
 
-
+    <script src='criacaoPerguntas/criacaoPerguntas.controller.js'></script>
+    <script src='criacaoPerguntas/criacaoPerguntas.service.js'></script>
 </body>
 
 </html>
