Alteração no Layout geral do site.

--- a/Unico teste real da internet/index.html
+++ b/Unico teste real da internet/index.html
@@ -11,7 +11,7 @@
 
 <body ng-app="testeInternet">
     <header>
-        <a href="/#!/index">TOP TESTES 2000</a>
+        <a href="/#!/index" class="logo">TOP TESTES 2000</a>
         <a href="/#!/ranking">RANKING DOS QI'S</a>
     </header>
     <div class="container">
