Alteração nos diretos de cópia.
Adição de um contribuidor aos direitos do website.

--- a/Unico teste real da internet/index.html
+++ b/Unico teste real da internet/index.html
@@ -31,7 +31,7 @@
             </section>
         </article>
         <section class="copyright">
-            All rights reserved Leonardo Alves and Guilherme Silva
+            All rights reserved Leonardo Alves, Guilherme Silva and Pietro Isotton - 2017.
         </section>
     </footer>
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js'></script>
