Mudanças no layout do quiz
CSS e Html do quiz editados para se situarem melhor no novo ambiente.

--- a/Unico teste real da internet/quiz/quiz.html
+++ b/Unico teste real da internet/quiz/quiz.html
@@ -5,7 +5,7 @@
                 {{questao.pergunta}}  
             </div>
             <span>
-                <button ng-if = "nPergunta > 0" ng-click="retrocederPergunta()">---Questão Anterior---</button>
+                <button ng-if = "nPergunta > 0" ng-click="retrocederPergunta()">Questão Anterior</button>
             </span>
         </div>
         <div class = "respostas">
