Melhorias na criação de perguntas
Agora contém input para nota-valor da questão a ser criada, acompanhando o rumo do projeto.

--- a/Unico teste real da internet/criacaoPerguntas/criacaoPerguntas.html
+++ b/Unico teste real da internet/criacaoPerguntas/criacaoPerguntas.html
@@ -1,11 +1,11 @@
 <form novalidate ng-submit='criarPergunta()' name=perguntaForm>
-    Pergunta*:   <input type="text" required min = "1" id='pergunta' ng-model="pergunta">
-    <br>Resposta 1*:   <input type="text" required min = "1" ng-model="resposta[0].resposta">
-    <br>Resposta 2*:   <input type="text" required min = "1" ng-model="resposta[1].resposta">
-    <br>Resposta 3:    <input type="text" ng-model="resposta[2].resposta">
-    <br>Resposta 4:    <input type="text" ng-model="resposta[3].resposta">
-    <br>Resposta 5:    <input type="text" ng-model="resposta[4].resposta">
-    <br>PS: * quer dizer que é obrigatorio. <br>
+    Pergunta*:   <textarea required minlength = "1" id='pergunta' ng-model="pergunta" class="insertPergunta"></textarea>
+    <br>Resposta 1*:   <textarea required minlength = "1" ng-model="resposta[0].resposta" class = "insertResposta"></textarea> Nota: <input type="number" max = "5" min = "0" ng-model="resposta[0].nota">
+    <br>Resposta 2*:   <textarea required minlength = "1" ng-model="resposta[1].resposta" class = "insertResposta"></textarea> Nota: <input type="number" max = "5" min = "0" ng-model="resposta[1].nota">
+    <br>Resposta 3:    <textarea ng-model="resposta[2].resposta" class = "insertResposta"></textarea> Nota: <input type="number" max = "5" min = "0" ng-model="resposta[2].nota">
+    <br>Resposta 4:    <textarea ng-model="resposta[3].resposta" class = "insertResposta"></textarea> Nota: <input type="number" max = "5" min = "0" ng-model="resposta[3].nota">
+    <br>Resposta 5:    <textarea ng-model="resposta[4].resposta" class = "insertResposta"></textarea> Nota: <input type="number" max = "5" min = "0" ng-model="resposta[4].nota">
+    <br>PS: * quer dizer que é obrigatorio. Nota = Quanto ganha de pontuacao ao selecionar aquele botao. max = 5. <br>
     <button type='submit'>Enviar pro banco</button>
     <br> {{pergunta}}
     <br> {{resposta}}
