Mudanças na página de quiz.
Agora a página de quiz é responsável pela manipulação do Score do usuário, alternando de acordo com as respostas escolhidas. Algumas mudanças leves no layout.

--- a/Unico teste real da internet/quiz/quiz.html
+++ b/Unico teste real da internet/quiz/quiz.html
@@ -10,7 +10,7 @@
         </div>
         <div class = "respostas">
             <span ng-repeat="resposta in questao.respostas">
-            <button ng-click="avancarPergunta()">{{resposta.resposta}}</button> 
+            <button ng-click="avancarPergunta(resposta.nota)">{{resposta.resposta}}</button> 
             </span>
         </div>
     </div>
