Mudança no cabeçalho do site.
Alteração entre "Ranking dos QI's" para "Ranking das pontuações"

--- a/Unico teste real da internet/index.html
+++ b/Unico teste real da internet/index.html
@@ -12,7 +12,7 @@
 <body ng-app="testeInternet">
     <header>
         <a href="/#!/index" class="logo">TOP TESTES 2000</a>
-        <a href="/#!/ranking">RANKING DOS QI'S</a>
+        <a href="/#!/ranking">RANKING DAS PONTUACOES</a>
     </header>
     <div class="container">
         <ng-view></ng-view>
