Substituir formulario do nome por login com o google.

--- a/Unico teste real da internet/home/home.html
+++ b/Unico teste real da internet/home/home.html
@@ -1,6 +1,20 @@
+<div class="home-container">
+   
+    <article ng-hide="logged">
+        <h3>Por favor faça o login</h3>
+        <p>É necessário termos algumas informações suas antes de continuarmos.</p>
+    </article>
+    
+</div>
 
-<form novalidate ng-submit='avancar()' name=usuarioForm>
-    <label for="usuario.nome"></label>
-    <input type="text" required min = "1" id='usuario.nome' ng-model="usuario.nome">
-    <button type='submit'>AVANÇAR</button>
-</form>
+
+<!-- 24339375695-shm8n2m3abto6rruber80iid0mijrvqk.apps.googleusercontent.com -->
+<!-- aQAfJlfHC9gbDH5JcLiRl-8d -->
+
+<!--<section>
+        <form novalidate ng-submit='avancar()' name=usuarioForm>
+            <label for="usuario.nome">Insira seu nome:</label>
+            <input type="text" required min = "1" id='usuario.nome' ng-model="usuario.nome">
+            <button type='submit'>AVANÇAR</button>
+        </form>
+    </section>    -->
