--- a/Unico teste real da internet/index.html
+++ b/Unico teste real da internet/index.html
@@ -5,14 +5,19 @@
     <title>Descubra seu QI</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-signin-client_id" content="24339375695-sngstbgelv3cpvvgs96ndoa6n472u3n4.apps.googleusercontent.com">
     <link href="css/style.css" rel="stylesheet">
-
+    
 </head>
 
 <body ng-app="testeInternet">
+   
     <header>
         <a href="/#!/index" class="logo">TOP TESTES 2000</a>
         <a href="/#!/ranking">RANKING DAS PONTUACOES</a>
+        <div ng-hide="logged" class="g-signin2" data-onsuccess="onSignIn"></div>
+        <a href="#" ng-show="logged" class="g-signout2" onclick="signOut();">Sign out</a>        
+
     </header>
     <div class="container">
         <ng-view></ng-view>
@@ -34,6 +39,9 @@
             All rights reserved Leonardo Alves, Guilherme Silva and Pietro Isotton - 2017.
         </section>
     </footer>
+
+    <script src="https://apis.google.com/js/platform.js" async defer></script>    
+
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js'></script>
 
