adicionar visualizaçao basica do usuario

--- a/Unico teste real da internet/index.html
+++ b/Unico teste real da internet/index.html
@@ -16,9 +16,11 @@
     <header>
         <a href="/#!/index" class="logo">TOP TESTES 2000</a>
         <a href="/#!/ranking">RANKING DAS PONTUACOES</a>
-        <section ng-controller="authController">
+        <section ng-controller="authController" class="profile-info">
+            <img ng-show="logged" class="profile-pic aligned-center" ng-src="{{usuario.foto}}">
+            <span ng-show="logged" class="aligned-center">{{usuario.nome}}</span>
             <div ng-hide="logged" class="g-signin2" ng-click="signIn()"></div>
-            <a href="#" ng-show="logged" class="g-signout2" ng-click="signOut()">Sign out</a>          
+            <a href="#" ng-show="logged" class="g-signout2" ng-click="signOut()">Sign out</a>            
         </section>
 
     </header>
@@ -43,7 +45,7 @@
         </section>
     </footer>
 
-    <script src="https://apis.google.com/js/platform.js"></script>    
+    <script src="https://apis.google.com/js/platform.js">gapi.auth2.init({ cookie_policy: none, })</script>    
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js'></script>
 
