CSS e criação da página de Quizzes.
Exatamente o que diz no titulo. Awesome changes.

--- a/Unico teste real da internet/quizMenu/quizMenu.html
+++ b/Unico teste real da internet/quizMenu/quizMenu.html
@@ -1,1 +1,7 @@
-{{quizzes}}
+<h3 class="quizzHeader"> Lista de Quizzes, pag {{nPagina}} </h3>
+<div class = "quizzes">
+    <section class = "quizBox" ng-repeat="quiz in quizzes">
+        <p> {{quiz.titulo}}      </p>
+        <p> DE: {{quiz.autor}} </p>
+    </section>
+</div>
