Adição do script ao index.

--- a/Unico teste real da internet/index.html
+++ b/Unico teste real da internet/index.html
@@ -65,6 +65,9 @@
 
     <script src='criacaoPerguntas/criacaoPerguntas.controller.js'></script>
     <script src='criacaoPerguntas/criacaoPerguntas.service.js'></script>
+
+    <script src='quizMenu/quizMenu.controller.js'></script>
+
 </body>
 
 </html>
