Melhoria na aparência da página de quizzes.
Leonardo alves por favor faz a parte dos indices de pagina obgd

--- a/Unico teste real da internet/quizMenu/quizMenu.html
+++ b/Unico teste real da internet/quizMenu/quizMenu.html
@@ -1,4 +1,4 @@
-<h3 class="quizzHeader"> Lista de Quizzes, pag {{nPagina}} </h3>
+<h3 class="quizHeader"> LISTA DE QUIZZES: PÁGINA {{nPagina+1}} </h3>
 <div class = "quizzes">
     <section class = "quizBox" ng-repeat="quiz in quizzes">
         <p> {{quiz.titulo}}      </p>
