Adicionar service de usuario.

--- a/Unico teste real da internet/index.html
+++ b/Unico teste real da internet/index.html
@@ -63,6 +63,8 @@
 
     <script src='ranking/ranking.controller.js'></script>
 
+    <script src='usuario/usuario.service.js'></script>
+
     <script src='criacaoPerguntas/criacaoPerguntas.controller.js'></script>
     <script src='criacaoPerguntas/criacaoPerguntas.service.js'></script>
 
