Começo da criação de um menu para a home.

--- a/Unico teste real da internet/home/home.html
+++ b/Unico teste real da internet/home/home.html
@@ -5,6 +5,19 @@
         <p>É necessário termos algumas informações suas antes de continuarmos.</p>
     </article>
     
+    <div class="menu-home">
+        <div class = "opcoes">
+            <p> <a> Crie seu próprio Quiz! </a> </p>
+            <p> <a> Encontre seu Quiz ideal! </a> </p>
+        </div>
+        <div class = "randomQuizzes">
+            <section class = "quizAnchor" ng-repeat="quiz in quizzes">
+                <img ng-url="quiz.foto">
+                <p> <a> {{quiz.titulo}} </a> </p>
+                <p> {{quiz.resumo}} </p> 
+            </section>
+        </div>
+    </div>
 </div>
 
 
