--- a/Unico teste real da internet/quizMenu/quizMenu.html
+++ b/Unico teste real da internet/quizMenu/quizMenu.html
@@ -2,10 +2,10 @@
 <div class = "quizzes">
     <section class = "quizBox" ng-repeat="quiz in quizzes">
         <div>
-            <p class = "quizztitle"> {{quiz.titulo}}      </p>
-            <img class = "foto" ng-src="{{quiz.foto}}">
+            <p class = "quiztitle"> <a ng-href = "/#!/quiz/{{quiz.id}}"> {{quiz.titulo}}      </a></p> 
+            <div class = "foto"><img ng-href = "/#!/quiz/{{quiz.id}}" ng-src="{{quiz.foto}}"></div>
             <p class = "resumo"> {{quiz.resumo}} </p>
         </div>
-        <p class = "autor"> DE: <a>{{quiz.autor.nome}}<a> </p>
+        <p class = "autor"> DE: <a ng-href="/#!/perfil/{{quiz.autor.id}}">{{quiz.autor.nome}}<a> </p>
     </section>
 </div>
