--- a/Unico teste real da internet/usuario/perfil.html
+++ b/Unico teste real da internet/usuario/perfil.html
@@ -5,7 +5,7 @@
     </article>
 
     <article class="wrapper">
-        <h2>Meus quizzes</h2>
+        <h2 class = "title">Meus quizzes</h2>
 
         <section class="quizzes user-quizzes">
             
@@ -15,6 +15,4 @@
             
         </section>
     </article>
-
-
 </section>
