--- a/Unico teste real da internet/home/home.html
+++ b/Unico teste real da internet/home/home.html
@@ -11,7 +11,7 @@
                 <p class = "quiztitle"> <a ng-href = "/#!/quiz/{{quiz.id}}"> {{quiz.titulo}} </a> </p>
                 <div class = "foto"> <img ng-href = "/#!/quiz/{{quiz.id}}" ng-src="{{quiz.foto}}"> </div>
                 <p class = "resumo"> {{quiz.resumo}} </p> 
-                <p class = "autor"> <a ng-href = "/#!/perfil/{{quiz.autor.id}}"> {{quiz.autor.nome}} <a> </p>
+                <p class = "autor"> Por: <a ng-href = "/#!/perfil/{{quiz.autor.id}}"> {{quiz.autor.nome}} <a> </p>
             </section>
         </div>
     </div>
