--- a/Unico teste real da internet/quizMenu/quizMenu.html
+++ b/Unico teste real da internet/quizMenu/quizMenu.html
@@ -1,11 +1,19 @@
-<h3 class="quizHeader"> LISTA DE QUIZZES: PÁGINA {{nPagina+1}} </h3>
-<div class = "quizzes">
-    <section class = "quizBox" ng-repeat="quiz in quizzes">
-        <div>
-            <p class = "quiztitle"> <a ng-href = "/#!/quiz/{{quiz.id}}"> {{quiz.titulo}}      </a></p> 
-            <div class = "foto"><img ng-href = "/#!/quiz/{{quiz.id}}" ng-src="{{quiz.foto}}"></div>
-            <p class = "resumo"> {{quiz.resumo}} </p>
+<div class = "quizMenu">
+    <div>
+        <h3 class="quizHeader"> LISTA DE QUIZZES: PÁGINA {{nPagina}} </h3>
+        <div class = "quizzes">
+            <section class = "quizBox" ng-repeat="quiz in quizzes track by $index">
+                <div>
+                    <p class = "quiztitle"> <a ng-href = "/#!/quiz/{{quiz.id}}"> {{quiz.titulo}}      </a></p> 
+                    <div class = "foto"><img ng-href = "/#!/quiz/{{quiz.id}}" ng-src="{{quiz.foto}}"></div>
+                    <p class = "resumo"> {{quiz.resumo}} </p>
+                </div>
+                <p class = "autor"> DE: <a ng-href="/#!/perfil/{{quiz.autor.id}}">{{quiz.autor.nome}}</a> </p>
+            </section>
         </div>
-        <p class = "autor"> DE: <a ng-href="/#!/perfil/{{quiz.autor.id}}">{{quiz.autor.nome}}<a> </p>
-    </section>
+    </div>
+    <div class = "pagebuttons">
+        <a ng-show="nPagina>1" ng-click="retornarPagina()" class = "aligned-center readmore link"><i class="fa fa-arrow-left" aria-hidden="true"></i> </a>
+        <a ng-click="proximaPagina()" class = "aligned-center readmore link"> <i class="fa fa-ellipsis-h" aria-hidden="true"></i> </a>
+    </div>
 </div>
