Adicionar script da diretiva no index.

--- a/Unico teste real da internet/index.html
+++ b/Unico teste real da internet/index.html
@@ -71,6 +71,7 @@
 
     <script src='criacaoQuiz/criacaoQuiz.controller.js'></script>
     <script src='criacaoQuiz/criacaoQuiz.service.js'></script>
+    <script src='criacaoQuiz/criacaoQuiz.directive.js'></script>
 
     <script src='quizMenu/quizMenu.controller.js'></script>
 
