--- a/Unico teste real da internet/criacaoQuiz/criacaoQuiz.html
+++ b/Unico teste real da internet/criacaoQuiz/criacaoQuiz.html
@@ -1,13 +1,9 @@
 <form novalidate ng-submit='criarPergunta()' name=perguntaForm>
-    Pergunta*:   <textarea required minlength = "1" id='pergunta' ng-model="pergunta" class="insertPergunta"></textarea>
-    <br>Resposta 1*:   <textarea required minlength = "1" ng-model="resposta[0].resposta" class = "insertResposta"></textarea> Nota: <input type="number" max = "5" min = "0" ng-model="resposta[0].nota">
-    <br>Resposta 2*:   <textarea required minlength = "1" ng-model="resposta[1].resposta" class = "insertResposta"></textarea> Nota: <input type="number" max = "5" min = "0" ng-model="resposta[1].nota">
-    <br>Resposta 3:    <textarea ng-model="resposta[2].resposta" class = "insertResposta"></textarea> Nota: <input type="number" max = "5" min = "0" ng-model="resposta[2].nota">
-    <br>Resposta 4:    <textarea ng-model="resposta[3].resposta" class = "insertResposta"></textarea> Nota: <input type="number" max = "5" min = "0" ng-model="resposta[3].nota">
-    <br>Resposta 5:    <textarea ng-model="resposta[4].resposta" class = "insertResposta"></textarea> Nota: <input type="number" max = "5" min = "0" ng-model="resposta[4].nota">
-    <br>PS: * quer dizer que é obrigatorio. Nota = Quanto ganha de pontuacao ao selecionar aquele botao. max = 5. <br>
-    <button type='submit'>Enviar pro banco</button>
-    <br> {{pergunta}}
-    <br> {{resposta}}
-    <br> {{oi}}
+
+    <div class = "questions">
+        <div class = "caixa">
+            <criar-quiz parte="2"></criar-quiz>        
+        </div>
+    </div> 
+
 </form>
