--- a/Unico teste real da internet/home/home.html
+++ b/Unico teste real da internet/home/home.html
@@ -9,7 +9,7 @@
         <div class = "randomQuizzes">
             <section class = "quizAnchor" ng-repeat="quiz in quizzes">
                 <p class = "quiztitle"> <a ng-href = "/#!/quiz/{{quiz.id}}"> {{quiz.titulo}} </a> </p>
-                <div class = "foto"> <img ng-href = "/#!/quiz/{{quiz.id}}" ng-src="{{quiz.foto}}"> </div>
+                <div class = "foto"> <a ng-href = "/#!/quiz/{{quiz.id}}"><img ng-src="{{quiz.foto}}"></a></div>
                 <p class = "resumo"> {{quiz.resumo}} </p> 
                 <p class = "autor"> Por: <a ng-href = "/#!/perfil/{{quiz.autor.id}}"> {{quiz.autor.nome}} <a> </p>
             </section>
