--- a/Unico teste real da internet/quizMenu/quizMenu.html
+++ b/Unico teste real da internet/quizMenu/quizMenu.html
@@ -5,7 +5,7 @@
             <section class = "quizBox" ng-repeat="quiz in quizzes track by $index">
                 <div>
                     <p class = "quiztitle"> <a ng-href = "/#!/quiz/{{quiz.id}}"> {{quiz.titulo}}      </a></p> 
-                    <div class = "foto"><img ng-href = "/#!/quiz/{{quiz.id}}" ng-src="{{quiz.foto}}"></div>
+                    <div class = "foto"><a ng-href = "/#!/quiz/{{quiz.id}}"><img ng-src="{{quiz.foto}}"></a></div>
                     <p class = "resumo"> {{quiz.resumo}} </p>
                 </div>
                 <p class = "autor"> DE: <a ng-href="/#!/perfil/{{quiz.autor.id}}">{{quiz.autor.nome}}</a> </p>
