Mudar rota para criar link na home.

--- a/Unico teste real da internet/home/home.html
+++ b/Unico teste real da internet/home/home.html
@@ -2,7 +2,7 @@
     
     <div class="menu-home">
         <div class = "opcoes">
-            <p class="criar"> <a ng-href="/#!/criarquiz"> Crie seu próprio Quiz! </a> </p>
+            <p class="criar"> <a ng-href="/#!/criar"> Crie seu próprio Quiz! </a> </p>
             <p> <a ng-href="/#!/quizzes"> Encontre seu Quiz ideal! </a> </p>
         </div>
         <h3> QUIZZES ALEATÓRIOS </h3>
