Melhoria do sistema de busca.

--- a/Unico teste real da internet/search/search.html
+++ b/Unico teste real da internet/search/search.html
@@ -1,3 +1,18 @@
-<p>Resultados da sua busca:</p>
+<div class="">
+    <h3 class = "title">Resultados da sua busca (PAG {{nPagina}}):</h3>
 
-<p>{{resultado}}</p>
+    <div class = "quizzes">
+        <section class = "quizBox" ng-repeat="quiz in resultado track by $index">
+            <div>
+                <p class = "quiztitle"> <a ng-href = "/#!/quiz/{{quiz.id}}"> {{quiz.titulo}}      </a></p> 
+                <div class = "foto"><a ng-href = "/#!/quiz/{{quiz.id}}"><img ng-src="{{quiz.foto}}"></a></div>
+                <p class = "resumo"> {{quiz.resumo}} </p>
+            </div>
+            <p class = "autor"> DE: <a ng-href="/#!/perfil/{{quiz.autor.id}}">{{quiz.autor.nome}}</a> </p>
+        </section>
+    </div>
+    <div class = "pagebuttons">
+        <a ng-show="nPagina>1" ng-click="retornarPagina()" class = "aligned-center readmore link"><i class="fa fa-arrow-left" aria-hidden="true"></i> </a>
+        <a ng-click="proximaPagina()" class = "aligned-center readmore link"> <i class="fa fa-ellipsis-h" aria-hidden="true"></i> </a>
+    </div>
+</div>
