atualização do CSS de ambas telas de menu e search
Atualização para fazer com que as telas citadas no título compartilhem das mesmas classes, evitando ter duas ou mais classes diferentes mas que fazem exatamente a mesma coisa

--- a/Unico teste real da internet/quizMenu/quizMenu.html
+++ b/Unico teste real da internet/quizMenu/quizMenu.html
@@ -1,6 +1,6 @@
-<div class = "quizMenu">
+<div class = "page-div">
     <div>
-        <h3 class="quizHeader"> LISTA DE QUIZZES: PÁGINA {{nPagina}} </h3>
+        <h3 class="title"> LISTA DE QUIZZES: PÁGINA {{nPagina}} </h3>
         <div class = "quizzes">
             <section class = "quizBox" ng-repeat="quiz in quizzes track by $index">
                 <div>
