--- a/Unico teste real da internet/search/search.html
+++ b/Unico teste real da internet/search/search.html
@@ -1,5 +1,6 @@
-<div class="">
+<div class="page-div">
     <h3 class = "title">Resultados da sua busca (PAG {{nPagina}}):</h3>
+    <h1 class="title" ng-show="mensagem"> {{mensagem}} <h1>
 
     <div class = "quizzes">
         <section class = "quizBox" ng-repeat="quiz in resultado track by $index">
