--- a/Unico teste real da internet/usuario/perfil.html
+++ b/Unico teste real da internet/usuario/perfil.html
@@ -22,22 +22,20 @@
 
     <div>
         <h3 class="title"> Quizzes do usuário, pag {{nPagina}} </h3>
-        <h1 class="title" ng-show="mensagem"> {{mensagem}}
-            <h1>
-                <div class="quizzes">
-                    <section class="quizBox" ng-repeat="quiz in quizzes track by $index">
-                        <div>
-                            <p class="quiztitle"> <a ng-href="/#!/quiz/{{quiz.id}}"> {{quiz.titulo}}      </a></p>
-                            <div class="foto"><a ng-href="/#!/quiz/{{quiz.id}}"><img ng-src="{{quiz.foto}}"></a></div>
-                            <p class="resumo"> {{quiz.resumo}} </p>
-                        </div>
-                        <p class="autor"> DE: <a ng-href="/#!/perfil/{{quiz.autor.id}}">{{quiz.autor.nome}}</a> </p>
-                    </section>
+        <div class="quizzes">
+            <section class="quizBox" ng-repeat="quiz in quizzes track by $index">
+                <div>
+                    <p class="quiztitle"> <a ng-href="/#!/quiz/{{quiz.id}}"> {{quiz.titulo}}      </a></p>
+                    <div class="foto"><a ng-href="/#!/quiz/{{quiz.id}}"><img ng-src="{{quiz.foto}}"></a></div>
+                    <p class="resumo"> {{quiz.resumo}} </p>
                 </div>
+                <p class="autor"> DE: <a ng-href="/#!/perfil/{{quiz.autor.id}}">{{quiz.autor.nome}}</a> </p>
+            </section>
+        </div>
     </div>
-</div>
-<div class="pagebuttons">
-    <a ng-show="nPagina>1" ng-click="retornarPagina()" class="aligned-center readmore link"><i class="fa fa-arrow-left" aria-hidden="true"></i> </a>
-    <a ng-click="proximaPagina()" class="aligned-center readmore link"> <i class="fa fa-ellipsis-h" aria-hidden="true"></i> </a>
-</div>
+    <h1 class="title" ng-show="mensagem"> {{mensagem}} </h1>
+    <div class="pagebuttons">
+        <a ng-show="nPagina>1" ng-click="retornarPagina()" class="aligned-center readmore link"><i class="fa fa-arrow-left" aria-hidden="true"></i> </a>
+        <a ng-click="proximaPagina()" class="aligned-center readmore link"> <i class="fa fa-ellipsis-h" aria-hidden="true"></i> </a>
+    </div>
 </div>
