Adicionar html e css de criação de quiz

--- a/Unico teste real da internet/criacaoQuiz/criacaoQuiz.html
+++ b/Unico teste real da internet/criacaoQuiz/criacaoQuiz.html
@@ -1,9 +1,7 @@
 <form novalidate ng-submit='criarPergunta()' name=perguntaForm>
 
-    <div class = "questions">
-        <div class = "caixa">
-            <criar-quiz parte="2"></criar-quiz>        
-        </div>
+    <div class = "questions">        
+        <criar-quiz parte="{{parteQuiz}}"></criar-quiz>    
     </div> 
 
 </form>
