--- a/Unico teste real da internet/criacaoQuiz/parte1.html
+++ b/Unico teste real da internet/criacaoQuiz/parte1.html
@@ -2,17 +2,26 @@
     <div class="pergunta">
         <label>
             Titulo:
-            <input type="text" class="rounded-input" name="titulo" placeholder="O titulo do meu super quiz">
+            <input type="text" class="rounded-input" name="tituloP" ng-model="quiz.titulo" placeholder="O titulo do meu super quiz" required>
+            <small ng-show="perguntaForm.tituloP.$error.required && perguntaForm.tituloP.$touched">Preencha o campo <br/></small>  
+             
+        </label>
+        <label>            
+            Insira a foto de capa: 
+            <input class="rounded-input" type="url" name="fotoCapa" ng-model="quiz.foto" placeholder="http://minhafoto.com/foto.jpg" required>
+            <small ng-show="perguntaForm.fotoCapa.$error.url">Preencha com um URL</small>
+            <small ng-show="perguntaForm.fotoCapa.$error.required && perguntaForm.fotoCapa.$touched">Preencha o campo</small>            
         </label>
         <label>
-            Insira a foto de capa: 
-            <input class="rounded-input" type="text" name="foto-capa" ng-model="fotoSrc" placeholder="http://minhafoto.com/foto.jpg">
+            Resumo:
+            <textarea ng-model="quiz.resumo" required name="resumo"></textarea>
+            <small ng-show="perguntaForm.resumo.$error.required && perguntaForm.resumo.$touched">Preencha com um URL</small>            
         </label>
     </div>
 
 </div>
 <div class="quiz-info">
-    <img ng-src="{{fotoSrc}}" class="preview-foto">
+    <img ng-src="{{quiz.foto}}" class="preview-foto">
 </div>
 
 <button class="aligned-center" ng-click="proximaParte()">Próxima parte</button>
