--- a/Unico teste real da internet/search/search.html
+++ b/Unico teste real da internet/search/search.html
@@ -11,7 +11,7 @@
         </section>
     </div>    
     <h1 class="title" ng-show="mensagem"> {{mensagem}} <h1>
-    <div class = "pagebuttons">
+    <div ng-hide="mensagem" class = "pagebuttons">
         <a ng-show="nPagina>1" ng-click="retornarPagina()" class = "aligned-center readmore link"><i class="fa fa-arrow-left" aria-hidden="true"></i> </a>
         <a ng-click="proximaPagina()" class = "aligned-center readmore link"> <i class="fa fa-ellipsis-h" aria-hidden="true"></i> </a>
     </div>
