Agora o usuário não pode buscar sem antes escrever algo na box. (lol)

--- a/Unico teste real da internet/index.html
+++ b/Unico teste real da internet/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class = "leftpart">
         <a href="/#!/index" class="logo">TOP TESTES 2000</a>
-            <form ng-submit="buscar(query)" ng-controller="searchHeaderController" class = "quizSearch"> Buscar quiz <input type="text" placeholder = "EX Tags: malonha, pietro | EX busca: malonha" ng-model = "query"> </input>
+            <form ng-submit="buscar(query)" ng-controller="searchHeaderController" class = "quizSearch"> Buscar quiz <input type="text" placeholder = "EX Tags: malonha, pietro | EX busca: malonha" ng-model = "query" required> </input>
             <button type = "submit" class="link"> <i class="fa fa-search" aria-hidden="true"></i> </button>
             <button type = "submit" ng-click="buscarTag()" class="link"><i class="fa fa-hashtag" aria-hidden="true"></i></button>
             </form>
