Adicionado display de tags aos quizzes da home.

--- a/Unico teste real da internet/home/home.html
+++ b/Unico teste real da internet/home/home.html
@@ -11,7 +11,12 @@
                 <p class = "quiztitle"> <a ng-href = "/#!/quiz/{{quiz.id}}"> {{quiz.titulo}} </a> </p>
                 <div class = "foto"> <a ng-href = "/#!/quiz/{{quiz.id}}"><img ng-src="{{quiz.foto}}"></a></div>
                 <p class = "resumo"> {{quiz.resumo}} </p> 
-                <p class = "autor"> Por: <a ng-href = "/#!/perfil/{{quiz.autor.id}}"> {{quiz.autor.nome}} <a> </p>
+                <p class = "autor"> Por: <a ng-href = "/#!/perfil/{{quiz.autor.id}}"> {{quiz.autor.nome}} </a> </p>
+                <p class = "tags"> 
+                    <a ng-repeat="tags in quiz.tags track by $index" ng-href="/#!/tag/{{tags}}" class = "link">
+                        <i class="fa fa-hashtag" aria-hidden="true"></i>{{tags}}
+                    </a>
+                </p>
             </section>
         </div>
     </div>
